--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -65,13 +65,13 @@ promo:
 
 
 #################################### Distros ########################
-gallery:
-  enable : true
-  title : "There are already plenty of great Linux distributions"
-  # Set the image directory to use as base
-  directory : "images/distros"
-  # Set the images to show in the gallery
-  images: ["Distro_Logo_ArchLinux.svg", "Distro_Logo_CentOS.svg", "Distro_Logo_Debian.svg", "Distro_Logo_Elementary.svg", "Distro_Logo_KDE+Neon.svg", "Distro_Logo_Kubuntu.svg", "Distro_Logo_LinuxMint.svg", "Distro_Logo_Manjaro.svg", "Distro_Logo_OpenSUSE.svg", "Distro_Logo_Ubuntu.svg", "fedora.png", "red-hat-2019-primary-stacked.svg" ]
+# gallery:
+#   enable : true
+#   title : "There are already plenty of great Linux distributions"
+#   # Set the image directory to use as base
+#   directory : "images/distros"
+#   # Set the images to show in the gallery
+#   images: ["Distro_Logo_ArchLinux.svg", "Distro_Logo_CentOS.svg", "Distro_Logo_Debian.svg", "Distro_Logo_Elementary.svg", "Distro_Logo_KDE+Neon.svg", "Distro_Logo_Kubuntu.svg", "Distro_Logo_LinuxMint.svg", "Distro_Logo_Manjaro.svg", "Distro_Logo_OpenSUSE.svg", "Distro_Logo_Ubuntu.svg", "fedora.png", "red-hat-2019-primary-stacked.svg" ]
 
 
 ############################# About Product #######################
