--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -26,7 +26,7 @@ features:
     # feature item loop
   - icon : "tf-ion-ios-cart-outline"
     title : "Be creative"
-    content : "Creating applications is a naturally creative endeavour. The sense of fulfilment gained when completing a project can be very rewarding. Exercise that half of your brain."
+    content : "Developing applications is a naturally creative endeavour. The sense of fulfilment gained when completing a project can be very rewarding. Exercise that half of your brain."
 
 
   # feature at the right of the image
