--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -199,3 +199,43 @@ testimonial:
       image : "images/avatars/jan_sprinz.jpg"
       content : "Working on Linux apps is a completely different experience from developing for a closed ecosystem. Though we're technically competitors, in the end, we're all collaborating on the same bigger vision."
       
+############################# About Product #######################
+aboutProduct2:
+  enable : true
+  title : "Sharing Your Creation"
+  items:
+    # about product item loop
+    - image : "images/packaging/appimage.png"
+      title : "AppImage"
+      content : "Distribute your desktop Linux application in the AppImage format and win users running all common Linux distributions. Package once and run everywhere. Reach users on all major desktop distributions."
+      button:
+        enable : true
+        label : "AppImage Packaging Guide"
+        link : "https://docs.appimage.org/packaging-guide/index.html"
+
+    # about product item loop
+    - image : "images/packaging/flatpak.png"
+      title : "Flatpak"
+      content : "Flatpak is a framework for distributing desktop applications on Linux. It has been created by developers who have a long history of working on the Linux desktop, and is run as an independent open source project."
+      button:
+        enable : true
+        label : "Flatpak Documentation"
+        link : "https://docs.flatpak.org/en/latest/"
+
+    # about product item loop
+    - image : "images/packaging/obs.png"
+      title : "openSUSE Build Service"
+      content : "The openSUSE Build Service is the public instance of the Open Build Service (OBS) used for development of the openSUSE distribution and to offer packages from same source for Fedora, Debian, Ubuntu, SUSE Linux Enterprise and other distributions."
+      button:
+        enable : true
+        label : "openSUSE Build Service Help"
+        link : "https://openbuildservice.org/help/"
+
+    # about product item loop
+    - image : "images/packaging/snapcraft.png"
+      title : "Snapcraft"
+      content : "Snapcraft is a powerful and easy to use command line tool for building snaps. Snaps are app packages for desktop, cloud and IoT that are easy to install, secure, cross-platform and dependency-free."
+      button:
+        enable : true
+        label : "Snapcraft Documentation"
+        link : "https://snapcraft.io/docs/snapcraft-overview"
