--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -205,6 +205,15 @@ aboutProduct2:
   title : "Sharing Your Creation"
   items:
     # about product item loop
+    - image : "images/packaging/appcenter.png"
+      title : "AppCenter"
+      content : "Publish and monetize your app on AppCenter, the open, pay-what-you-want app store for indie developers. Publish without distrupting your workflow—the AppCenter Dashboard integrates with GitHub for releases and issue tracking."
+      button:
+        enable : true
+        label : "AppImage Packaging Guide"
+        link : "https://docs.appimage.org/packaging-guide/index.html"
+
+    # about product item loop
     - image : "images/packaging/appimage.png"
       title : "AppImage"
       content : "Distribute your desktop Linux application in the AppImage format and win users running all common Linux distributions. Package once and run everywhere. Reach users on all major desktop distributions."
