--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -50,7 +50,7 @@ features:
     # feature item loop
   - icon : "tf-ion-ios-cart-outline"
     title : "Earn a wage"
-    content : "Build popular paid applications and services. It's a myth that Linux users don't support developers financially. Use this as an opportunity to create a new source of income for yourself"
+    content : "Build popular paid applications and services. It's a myth that Linux users don't support developers financially. Use this as an opportunity to create a new source of income for yourself."
 
 
 ############################# promo ############################
