--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -141,6 +141,15 @@ aboutProduct:
         link : "https://www.electronjs.org/docs"
 
     # about product item loop
+    - image : "images/fyne-code.png"
+      title : "Fyne"
+      content : "Fyne is a rapidly expanding cross-platform toolkit for the Go language. Apps run on desktop and mobile operating systems, requiring no dependencies beyond an up to date graphics driver. Fyne also underpins the FyneDesk project for a Material Design desktop experience."
+      button:
+        enable : true
+        label : "Fyne Documentation"
+        link : "https://developer.fyne.io"
+
+    # about product item loop
     - image : "images/ubuntu-touch.png"
       title : "Ubuntu Touch"
       content : "Ubuntu Touch is an open source operating system designed to run on a variety of devices from phones to tablets and PCs. Native Ubuntu Touch applications are made using QML or HTML with their behavior defined in JavaScript, C++, Python, Rust or Go."
