--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -105,7 +105,7 @@ aboutProduct:
   title : "Where to start"
   items:
     # about product item loop
-    - image : "images/kde-kdevelop.png"
+    - image : "images/qtcreator.png"
       title : "Qt"
       content : "Qt is cross-platform software for creating graphical user interfaces as well as cross-platform applications that run on various software and hardware platforms such as Linux, Windows, macOS, Android or embedded systems with little or no change in the underlying codebase while still being a native application with native capabilities and speed."
       button:
